Laboratorio 6. LocalStorage y Seguridad Exito y puesto boton de log out

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,6 @@
     <string name="user">Usuario</string>
     <string name="password">Contraseña</string>
     <string name="login">Ingresar</string>
-
+    <string name="logout">Cerrar Sesión</string>
 
 </resources>
